# id_plant

./: .gitignore  README.md  pyproject.toml
id_plant/: train_plant_id.py
notebooks/: train_plant_id.ipynb
utils/: training_helper_funcs.py
