[tool.poetry]
name = "id-plant"
version = "0.1.0"
description = "Identify plants"
authors = ["Tony Jiang <tony@marajo.ai>"]
readme = "README.md"
packages = [
    { include = "id_plant"},
    { include = "utils"},
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
pyarrow = "^18.1.0"
torch = {version = "^2.5.1+cu124", source = "pytorch-gpu"}
torchvision = {version = "^0.20.1+cu124", source = "pytorch-gpu"}
opencv-python = "^4.11.0.86"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.1"
notebook = "^7.2.2"
ipywidgets = "^8.1.5"
black = {extras = ["jupyter"], version = "^24.10.0"}

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
